# kyouth-data-ai

./: .gitignore  README.md
week1/: README.md  main.py  pyproject.toml
week1/src/: ingestor.py  loader.py  processor.py  profiler.py
week2/: .env.example  README.md  find_skill_gaps.py  prompt_model.py  pyproject.toml  rate_limits.txt  tag_data.py
week3/: .env.example  README.md  docker-compose.yml
week3/backend/: Dockerfile  pyproject.toml
week3/backend/src/: app.py
week3/backend/src/week2/: find_skill_gaps.py  prompt_model.py
week3/frontend/: Dockerfile  pyproject.toml
week3/frontend/src/: main.py
week3/frontend/src/templates/: chat_page.html
