[project]
name = "backend"
version = "0.1.0"
description = "Backend service for Week 3"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn==0.30.*",
    "pydantic==2.13.4",
    "ollama==0.4.0",
    "ruff==0.15.*",
    "python-dotenv==1.2.2",
    "google-genai==1.2.0",
]

